proxy handler refactor